# advent_of_code

2025/: adventofcode2025.cabal
2025/app/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  day12.hs
2025/data/: day4.txt  day7.txt
