cabal-version:      2.4
name:               adventofcode2025
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sigurður Ægir Jónsson
maintainer:         siggi84@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable day1
    main-is:          Day1.hs
    build-depends:
        base ^>=4.16.4.0,
        containers,
        adventofcode2025

    hs-source-dirs:   app
    default-language: Haskell2010

executable day2
    main-is:          Day2.hs
    build-depends:
        base ^>=4.16.4.0,
        parsec ^>=3.1.16,
        containers,
        adventofcode2025

    hs-source-dirs:   app
    default-language: Haskell2010

executable day3
    main-is:          Day3.hs
    build-depends:
        base ^>=4.16.4.0,
        parsec ^>=3.1.16,
        containers,
        adventofcode2025

    hs-source-dirs:   app
    default-language: Haskell2010

executable day4
    main-is:          Day4.hs
    build-depends:
        base ^>=4.16.4.0,
        parsec ^>=3.1.16,
        containers,
        adventofcode2025

    hs-source-dirs:   app
    default-language: Haskell2010

executable day5
    main-is:          Day5.hs
    build-depends:
        base ^>=4.16.4.0,
        parsec ^>=3.1.16,
        containers,
        adventofcode2025

    hs-source-dirs:   app

executable day6
    main-is:          Day6.hs
    build-depends:
        base ^>=4.16.4.0,
        parsec ^>=3.1.16,
        split ^>=0.2.5,
        containers,
        adventofcode2025

    hs-source-dirs:   app
    default-language: Haskell2010

executable day7
    main-is:          Day7.hs
    build-depends:
        base ^>=4.16.4.0,
        parsec ^>=3.1.16,
        split ^>=0.2.5,
        containers,
        adventofcode2025

    hs-source-dirs:   app

executable day8
    main-is:          Day8.hs
    build-depends:
        base ^>=4.16.4.0,
        parsec ^>=3.1.16,
        split ^>=0.2.5,
        containers,
        adventofcode2025

    hs-source-dirs:   app
    default-language: Haskell2010

executable day9
    main-is:          Day9.hs
    build-depends:
        base ^>=4.16.4.0,
        vector ^>=0.13.2,
        containers,

    hs-source-dirs:   app

executable day10
    main-is:          Day10.hs
    build-depends:
        base ^>=4.16.4.0,
        parsec ^>=3.1.16,
        split ^>=0.2.5,
        vector ^>=0.13.2,
        containers,
        adventofcode2025

    hs-source-dirs:   app
    default-language: Haskell2010
    default-language: Haskell2010

executable day11
    main-is:          Day11.hs
    build-depends:
        base ^>=4.16.4.0,
        parsec ^>=3.1.16,
        split ^>=0.2.5,
        vector ^>=0.13.2,
        mtl ^>=2.2.2,
        containers,
        adventofcode2025

    hs-source-dirs:   app
    default-language: Haskell2010

executable day12
    main-is:          Day12.hs
    build-depends:
        base ^>=4.16.4.0,
        parsec ^>=3.1.16,
        split ^>=0.2.5,
        vector ^>=0.13.2,
        mtl ^>=2.2.2,
        containers,
        adventofcode2025

    hs-source-dirs:   app
    default-language: Haskell2010
    default-language: Haskell2010
    default-language: Haskell2010
